# lol_esports-ai_test-

./: .gitignore  Home.py  README.md  app.py  data_loader.py  main.py  pyproject.toml
.taskmaster/: config.json  state.json
.taskmaster/docs/: PRD.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
components/: __init__.py  charts.py  sidebar.py  utils.py
config/: __init__.py  colors.py
data/: cluster.csv  lck.csv  val.csv
pages/: 1_EDA.py  2_Champion_Stats.py  3_Player_Profile.py  4_Team_Profile.py  5_Player_Comparison.py  6_Team_Comparison.py
tests/: test_champion_stats.py  test_charts.py  test_player_profile.py
