[project]
name = "lol-esports-gemini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "factor-analyzer>=0.5.1",
    "pandas>=2.2.0",
    "plotly>=6.5.0",
    "pytest>=8.3.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.36.0",
]
